# clix

./: .gitignore  CMakeLists.txt  README.md  build.sh
clix/: Ammo.cc  Ammo.hh  Audio.cc  Audio.hh  Config.cc  Config.hh  Controls.cc  Controls.hh  Core.cc  Core.hh  Crosshair.cc  Crosshair.hh  Enemy.cc  Enemy.hh  Entity.cc  Entity.hh  Global.cc  Global.hh  Gun.hh  Image.cc  Image.hh  Object.cc  Object.hh  Player.cc  Player.hh  Settings.hh  TextureChecker.hh  Vector2.hh
docs/: .$clix.drawio.dtmp  clix.drawio
examples/: clickerGame.cc  clickerGame.hh  clickerGame2.cc  coinToss.cc  hunter.cc  minimal.cc  snake.cc  tictactoe.cc  tictactoe.hh
src/: Ammo.cc  Ammo.hh  Audio.cc  Audio.hh  Builder.cc  Builder.hh  Controls.cc  Core.cc  Core.hh  Crosshair.cc  Crosshair.hh  Enemy.cc  Enemy.hh  Game.cc  Game.hh  Global.cc  Global.hh  Gun.cc  Gun.hh  Initializer.cc  Initializer.hh  Object.cc  Object.hh  PlayGround.cc  PlayGround.hh  Player.cc  Player.hh  Program.cc  Program.hh  Settings.hh  TextureChecker.cc  main.cc
